# AI-Travel-Planner-Django-React

./: README.md
backend/: .gitignore  activities.json  flight.json  pyproject.toml  restaurants.json
backend/app/: models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/recommendation/: all_crews.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/recommendation/modules/: activities.py  flights.py  iata_code.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ActivityCard.jsx  AuthForm.jsx  AuthForms.jsx  DestinationCard.jsx  DiningCard.jsx  InteractiveRating.jsx  LoginForm.jsx  MainCard.jsx  NavBar.jsx  RecommendationCard.jsx  RegisterForm.jsx
frontend/src/components/ui/: Background.jsx
frontend/src/core/themes/: theme.js
frontend/src/data/: destinations.json
frontend/src/pages/: AuthForms.jsx  AuthPage.jsx  HomePage.jsx  MainPage.jsx  NotAuthorized.jsx  ProfilePage.jsx  RecommendationDetailsPage.jsx  RecommendationsPage.jsx
frontend/src/services/: api.js
frontend/src/store/: state.js
